--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,11 @@
         {% endblock %}
     </head>
     <body>
+        {% for message in app.flashes('error') %}
+            <div class="alert alert-error">
+                {{ message }}
+            </div>
+        {% endfor %}
         {% block body %}{% endblock %}
     </body>
 </html>
